[gd_scene load_steps=8 format=3 uid="uid://c34s84tvv8odc"]

[ext_resource type="Script" path="res://scripts/entities/enemies/stationary_hand.gd" id="1_tqp3g"]
[ext_resource type="Texture2D" uid="uid://cvmmhdj2tkg8t" path="res://textures/entities/hand/lower_arm.png" id="2_lrsg5"]
[ext_resource type="Texture2D" uid="uid://cqwvkhogc2ogk" path="res://textures/entities/hand/upper_arm.png" id="3_365t1"]
[ext_resource type="PackedScene" uid="uid://mj1c3xxottsc" path="res://prefabs/components/item_grab_area.tscn" id="4_30idu"]
[ext_resource type="Texture2D" uid="uid://bji4iiq4yhkfe" path="res://textures/entities/hand/stationary_body.png" id="4_lplc8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wtyx7"]
size = Vector2(24, 10)

[sub_resource type="CircleShape2D" id="CircleShape2D_3th23"]
radius = 64.0

[node name="stationary_hand" type="CharacterBody2D"]
script = ExtResource("1_tqp3g")

[node name="hand_parts" type="Node2D" parent="."]

[node name="lower_arm" type="Sprite2D" parent="hand_parts"]
texture = ExtResource("2_lrsg5")
offset = Vector2(10, 0)

[node name="upper_arm" type="Sprite2D" parent="hand_parts"]
position = Vector2(28, 0)
texture = ExtResource("3_365t1")
offset = Vector2(6, 0)

[node name="looker" type="Node2D" parent="."]

[node name="body" type="Sprite2D" parent="."]
position = Vector2(0, 4)
texture = ExtResource("4_lplc8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 7)
shape = SubResource("RectangleShape2D_wtyx7")

[node name="item_grab_area" parent="." instance=ExtResource("4_30idu")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="item_grab_area"]
shape = SubResource("CircleShape2D_3th23")
